--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     },
     "require": {
         "vlucas/phpdotenv": "^5.6",
-        "mpdf/mpdf": "^8.2"
+        "mpdf/mpdf": "^8.2",
+        "phpmailer/phpmailer": "^7.0",
+        "stripe/stripe-php": "^19.1"
     }
 }
